--- a/hub.html
+++ b/hub.html
@@ -151,14 +151,14 @@
                      <span class="app-label">ListView</span>
                   </a>
    
-                  <a class="tile app bg-color-red" href="./charms-demo.html">
+                  <a class="tile app bg-color-red" href="#">
                      <div class="image-wrapper">
                         <span class="icon icon-publish"></span>
                      </div>
                      <span class="app-label">[TODO] Charms</span>
                   </a>
    
-                  <a class="tile app bg-color-yellow" href="./images.html">
+                  <a class="tile app bg-color-yellow" href="#">
                      <div class="image-wrapper">
                         <span class="icon icon-images"></span>
                      </div>
