--- a/base-css.html
+++ b/base-css.html
@@ -673,6 +673,45 @@
    &lt;/table&gt;
    </pre>
    
+             <h3><code>.table-cell-hover</code></h3>
+             <p>Enable a hover state on table cells within a <code>&lt;tbody&gt;</code>.</p>
+             <div class="bs-docs-example">
+                <table class="table table-cell-hover">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>First Name</th>
+                         <th>Last Name</th>
+                         <th>Username</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Mark</td>
+                         <td>Otto</td>
+                         <td>@mdo</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Jacob</td>
+                         <td>Thornton</td>
+                         <td>@fat</td>
+                      </tr>
+                      <tr>
+                         <td>3</td>
+                         <td colspan="2">Larry the Bird</td>
+                         <td>@twitter</td>
+                      </tr>
+                   </tbody>
+                </table>
+             </div>
+   <pre class="prettyprint linenums" style="margin-bottom: 18px;">
+   &lt;table class="table table-cell-hover"&gt;
+     …
+   &lt;/table&gt;
+   </pre>
+   
              <h3><code>.table-condensed</code></h3>
              <p>Makes tables more compact by cutting cell padding in half.</p>
              <div class="bs-docs-example">
