--- a/metro-components.html
+++ b/metro-components.html
@@ -85,6 +85,7 @@
                   <li><a href="./table.html">Table Demo</a></li>
                   <li><a href="./wizard.html">Wizard</a></li>
                   <li><a href="./icons.html">Icons</a></li>
+                  <li><a href="./toast.html">Toast Notifications</a></li>
                   <li><a href="./metro-components.html">Metro Components</a></li>
                   <li class="divider"></li>
                   <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
@@ -129,7 +130,6 @@
                <li><a href="#modals"><i class="icon-chevron-right"></i> Modal</a></li>
                <li><a href="#datepicker"><i class="icon-chevron-right"></i> DatePicker</a></li>
                <li><a href="#flipview"><i class="icon-chevron-right"></i> FlipView</a></li>
-               <li><a href="#toast"><i class="icon-chevron-right"></i> Toast Notifications</a></li>
             </ul>
          </div>
          <div class="span9">
@@ -524,96 +524,6 @@
      &lt;a class="carousel-control right" href="#myCarousel" data-slide="next"&gt;&amp;rsaquo;&lt;/a&gt;
    &lt;/div&gt;
    </pre>
-   
-            </section>
-   
-   
-   
-            <!-- Toast
-            ================================================== -->
-            <section id="toast">
-               <div class="page-header">
-                  <h1>Toast Notifications <small></small></h1>
-               </div>
-               <blockquote>
-                  A toast notification is a transient message to the user that contains relevant, time-sensitive information and provides quick access to related content in an app.
-                  <small>Toast notification overview (Windows Store apps)</small>
-               </blockquote>
-               <p>Following there are all the possible templates and styles for different kind of toast notifications.</p>
-   
-               <h2>Text only templates</h2>
-               <div class="bs-docs-example">
-   
-                  <div class="toast toasttext01">
-                     <button type="button" class="close" data-dismiss="alert"></button>
-                     <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
-                  </div>
-   
-                  <div class="toast toasttext02">
-                     <button type="button" class="close" data-dismiss="alert"></button>
-                     <h4>Heading text</h4>
-                     <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
-                  </div>
-   
-                  <div class="toast toasttext03">
-                     <button type="button" class="close" data-dismiss="alert"></button>
-                     <h4>Heading text that wraps over two lines. Vivamus elementum semper nisi.</h4>
-                     <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
-                  </div>
-   
-                  <div class="toast toasttext04">
-                     <button type="button" class="close" data-dismiss="alert"></button>
-                     <h4>Heading text</h4>
-                     <p>Body text that wraps over two lines.</p>
-                     <p>Body text that wraps over two lines.</p>
-                  </div>
-   
-               </div>
-   
-   <pre class="prettyprint linenums">
-   &lt;div class="toast toasttext01"&gt;
-      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-      &lt;p&gt;Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula&lt;/p&gt;
-   &lt;/div&gt;
-   
-   &lt;div class="toast toasttext02"&gt;
-      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-      &lt;h4&gt;Heading text&lt;/h4&gt;
-      &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
-   &lt;/div&gt;
-   
-   &lt;div class="toast toasttext03"&gt;
-      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-      &lt;h4&gt;Heading text that wraps over two lines. Vivamus elementum semper nisi.&lt;/h4&gt;
-      &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
-   &lt;/div&gt;
-   
-   &lt;div class="toast toasttext04"&gt;
-      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
-      &lt;h4&gt;Heading text&lt;/h4&gt;
-      &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
-      &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
-   &lt;/div&gt;
-   </pre>
-   
-               <h2>Image & Text templates</h2>
-               <div class="bs-docs-example">
-   
-                  <div class="toast toastimageandtext01">
-                     <button type="button" class="close" data-dismiss="alert"></button>
-                     <img src="content/img/avatar-movie-puzzles-2.jpg" alt="" />
-                     <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
-                  </div>
-   
-   
-               </div>
-   
-   <pre class="prettyprint linenums">
-   
-   </pre>
-   
-   
-   
    
             </section>
    
