--- a/toast.html
+++ b/toast.html
@@ -10,7 +10,7 @@
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>Listviews · BootMetro</title>
+   <title>Toast · BootMetro</title>
 
    <meta name="robots" content="noindex, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
@@ -63,7 +63,7 @@
    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
    <![endif]-->
 
-   <!-- Header
+   <!-- Subhead
    ================================================== -->
    <header id="nav-bar" class="container-fluid">
       <div class="row-fluid">
@@ -73,7 +73,7 @@
                <h5>BootMetro</h5>
                <div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                     ListViews
+                     Toast Notifications
                      <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
@@ -115,102 +115,116 @@
       </div>
    </div>
    </header>
+   <div class="container">
+      <blockquote>
+         A toast notification is a transient message to the user that contains relevant, time-sensitive information and provides quick access to related content in an app.
+         <small>Toast notification overview (Windows Store apps)</small>
+      </blockquote>
+      <p>Following there are all the possible templates and styles for different kind of toast notifications.</p>
+   </div>
    
-   <div class="container-fluid">
-      <div class="row-fluid">
-         <div class="metro span12">
+   <div class="container">
    
-            <header>
-               <h2>Grid Layout</h2>
-               <p>Basic sample for simple ListView into <em>Grid layout</em></p>
-            </header>
+      <!-- Docs nav
+      ================================================== -->
+      <div class="row">
+         <div class="span3 bs-docs-sidebar">
+            <ul class="nav nav-list bs-docs-sidenav">
+               <li><a href="#textonly"><i class="icon-chevron-right"></i> Text Only Templates</a></li>
+               <li><a href="#imagetext"><i class="icon-chevron-right"></i> Image &amp; Text Templates</a></li>
+            </ul>
+         </div>
+         <div class="span9">
    
-            <div id="listview-grid-demo" class="listview-container grid-layout">
-               <div class="mediumListIconTextItem">
-                  <img src="holder.js/60x60" class="mediumListIconTextItem-Image" />
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <img src="holder.js/60x60" class="mediumListIconTextItem-Image" />
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <img src="holder.js/60x60" class="mediumListIconTextItem-Image" />
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
+   
+            <!-- Text Only Templates
+            ================================================== -->
+            <section id="textonly">
+               <div class="page-header">
+                  <h1>Text Only Templates <small></small></h1>
                </div>
    
-               <div class="mediumListIconTextItem">
-                  <div class="icon-google-plus-3 mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
+               <div class="bs-docs-example">
+   
+                  <div class="toast toasttext01">
+                     <button type="button" class="close" data-dismiss="alert"></button>
+                     <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
                   </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <div class="icon-facebook-2 mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
+   
+                  <div class="toast toasttext02">
+                     <button type="button" class="close" data-dismiss="alert"></button>
+                     <h4>Heading text</h4>
+                     <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
                   </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <div class="icon-twitter-2 mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
+   
+                  <div class="toast toasttext03">
+                     <button type="button" class="close" data-dismiss="alert"></button>
+                     <h4>Heading text that wraps over two lines. Vivamus elementum semper nisi.</h4>
+                     <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
                   </div>
+   
+                  <div class="toast toasttext04">
+                     <button type="button" class="close" data-dismiss="alert"></button>
+                     <h4>Heading text</h4>
+                     <p>Body text that wraps over two lines.</p>
+                     <p>Body text that wraps over two lines.</p>
+                  </div>
+   
                </div>
    
-               <div class="mediumListIconTextItem">
-                  <div class="icon-images mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <div class="icon-movie mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
-               </div>
-               <div class="mediumListIconTextItem">
-                  <div class="icon-chart  mediumListIconTextItem-Image" ></div>
-                  <div class="mediumListIconTextItem-Detail">
-                     <h4>Title</h4>
-                     <h6>Lorem ipsum sin ut dolorem</h6>
-                  </div>
-               </div>
-   
-            </div>
-   
-            <br/>
-            <h3>Enabling selection mode</h3>
-            <p>To enabling the toggle selection simply use a script like this:</p>
    <pre class="prettyprint linenums">
-   $('#listview-grid-demo').on('click', '.mediumListIconTextItem', function(e){
-      e.preventDefault();
-      $(this).toggleClass('selected');
-   });
+   &lt;div class="toast toasttext01"&gt;
+      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+      &lt;p&gt;Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula&lt;/p&gt;
+   &lt;/div&gt;
+   
+   &lt;div class="toast toasttext02"&gt;
+      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+      &lt;h4&gt;Heading text&lt;/h4&gt;
+      &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+   &lt;/div&gt;
+   
+   &lt;div class="toast toasttext03"&gt;
+      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+      &lt;h4&gt;Heading text that wraps over two lines. Vivamus elementum semper nisi.&lt;/h4&gt;
+      &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+   &lt;/div&gt;
+   
+   &lt;div class="toast toasttext04"&gt;
+      &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+      &lt;h4&gt;Heading text&lt;/h4&gt;
+      &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+      &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+   &lt;/div&gt;
+   </pre>
+            </section>
+   
+   
+            <section id="imagetext">
+               <div class="page-header">
+                  <h1>Image & Text Templates <small></small></h1>
+               </div>
+   
+               <div class="bs-docs-example">
+   
+                  <div class="toast toastimageandtext01">
+                     <button type="button" class="close" data-dismiss="alert"></button>
+                     <img src="content/img/avatar-movie-puzzles-2.jpg" alt="" />
+                     <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+                  </div>
+   
+   
+               </div>
+   
+   <pre class="prettyprint linenums">
+   
    </pre>
    
-            <span class="label label-important">In the next version there will be a jQuery plugin to expand these functionality.</span>
-   
+            </section>
    
          </div>
       </div>
-   </div>
-   <div id="charms" class="win-ui-dark slide">
+   </div>   <div id="charms" class="win-ui-dark slide">
    
       <div id="theme-charms-section" class="charms-section">
          <div class="charms-header">
